renamed manual to xtp_manual

--- a/manual/.gitignore
+++ b/manual/.gitignore
@@ -23,17 +23,16 @@ fig/workflow/workflow.eps
 fig/workflow/workflow.fd
 literature.bib
 literature_short.bib
-manual.bbl
-manual.blg
-manual.brf
-manual.dvi
-manual.fdb_latexmk
-manual.idx
-manual.ilg
-manual.ind
-manual.log
-manual.out
-manual.pdf
-manual.toc
+xtp_manual.bbl
+xtp_manual.blg
+xtp_manual.brf
+xtp_manual.dvi
+xtp_manual.fdb_latexmk
+xtp_manual.idx
+xtp_manual.ilg
+xtp_manual.ind
+xtp_manual.log
+xtp_manual.out
+xtp_manual.toc
 reference/programs/*.tex
 reference/*/*.xml.tex
