--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(XTP_SCRIPTS) 
 if(WITH_DIPRO)
   foreach(SCRIPT xtp_dipro)
     configure_file(${SCRIPT}.in ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out @ONLY)
@@ -10,6 +11,7 @@ if(WITH_DIPRO)
       DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out)
     set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
     install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
+    set(XTP_SCRIPTS "${XTP_SCRIPTS} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
   endforeach(SCRIPT)
 endif(WITH_DIPRO)
 
@@ -24,5 +26,6 @@ foreach(SCRIPT xtp_testsuite xtp_update xtp_update_exciton xtp_basisset)
     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
+  set(XTP_SCRIPTS "${XTP_SCRIPTS} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
 endforeach(SCRIPT)
-
+set(XTP_SCRIPTS "${XTP_SCRIPTS}" PARENT_SCOPE)
