.travis.yml: bump compiler

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ addons:
     sources:
       - boost-latest 
       - george-edison55-precise-backports
+      - ubuntu-toolchain-r-test
     packages:
       - ccache
+      - gcc-4.8
+      - g++-4.8
       - libfftw3-dev
       - cmake
       - cmake-data
@@ -37,6 +40,7 @@ env:
     - HDF5_VERSION=1.8.14
     - GMX_MAX_THREADS=8
     - CCACHE_CPP2=yes #for clang
+    - GVER=4.8
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
     - CTP=yes WERROR=yes J=4
     - CTP=yes WALL=yes J=4
@@ -90,6 +94,7 @@ before_script:
       cd hdf5-${HDF5_VERSION} && ./configure --prefix=$HOME/hdf5 && make -j4 &> /dev/null && make install && cd ..;
     fi
   - if [[ ${MAN} ]]; then git clone --depth=1 https://github.com/votca/doxygen.git "$HOME/votca/src/devdoc"; fi 
+  - if [[ ${GVER} ]]; then export CC=gcc-${GVER}; export CXX=g++-${GVER}; fi
 
 script:
   - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
