--- a/scripts/xtp_basisset.in
+++ b/scripts/xtp_basisset.in
@@ -53,13 +53,13 @@ progargs = argparse.ArgumentParser(prog='xtp_basisset',
     formatter_class=lambda prog: XtpHelpFormatter(prog,max_help_position=70),
 	description=PROGDESCR)
 	
-progargs.add_argument('-f', '--inputnw',
-    dest='nwchem',   
+progargs.add_argument('-f', '--input',
+    dest='input',   
     action='store',
     required=False,
     type=str,
 	default='',
-    help='NWchem file containing the basisset.')
+    help='NWchem file containing the basisset or Turbomole folder with element names.')
 
 progargs.add_argument('-o', '--outputvotca',
     dest='outputfile',   
@@ -68,6 +68,15 @@ progargs.add_argument('-o', '--outputvotca',
     type=str,
 	default='',
     help='Path of votca outputfile')
+
+
+progargs.add_argument('-t', '--turbomolebasisset',
+    dest='turbobasis',   
+    action='store',
+    required=False,
+    type=str,
+	default='',
+    help='For turbomole specify the basisset that is supposed to be extracted from Files, for auxbasis sets the basisset the aux basisset is supposed to be used for.')
     
 OPTIONS = progargs.parse_args()
 if OPTIONS.nwchem == '':
@@ -77,45 +86,116 @@ if OPTIONS.outputfile == '':
 	progargs.print_help()
 	okquit("\nQuit here, because: outputfile not set (option -o/--outputvotca)")
 
-# =============================================================================
-# PARSING NWCHEM FILE
-# =============================================================================
-
 def getelemententry(root,element):
     for e in root:
 	print e.get("name")
         if e.get("name")==element:
             return e
     return lxml.SubElement(root,"element",name=entries[0])
-types=["S","P","D","F","G"]
-elements=['H', 'He', 'Li', 'Be', 'B', 'C', 'N', 'O', 'F', 'Ne', 'Na', 'Mg', 'Al', 'Si', 'P', 'S', 'Cl', 'K', 'Ar', 'Ca', 'Sc', 'Ti', 'V', 'Cr', 'Mn', 'Fe', 'Ni', 'Co', 'Cu', 'Zn', 'Ga', 'Ge', 'As', 'Se', 'Br', 'Kr', 'Rb', 'Sr', 'Y', 'Zr', 'Nb', 'Mo', 'Tc', 'Ru', 'Rh', 'Pd', 'Ag', 'Cd', 'In', 'Sn', 'Sb', 'I', 'Te', 'Xe', 'Cs', 'Ba', 'La', 'Ce', 'Pr', 'Nd', 'Pm', 'Sm', 'Eu', 'Gd', 'Tb', 'Dy', 'Ho', 'Er', 'Tm', 'Yb', 'Lu', 'Hf', 'Ta', 'W', 'Re', 'Os', 'Pt', 'Ir', 'Au', 'Hg', 'Tl', 'Pb', 'Bi', 'Po', 'At', 'Rn', 'Fr', 'Ra', 'Ac', 'Pa', 'Th', 'Np', 'U', 'Am', 'Pu', 'Bk', 'Cm', 'Cf', 'Es', 'Fm', 'Md', 'No', 'Rf', 'Lr', 'Db', 'Bh', 'Sg', 'Mt', 'Ds', 'Rg', 'Hs', 'Uut', 'Uub', 'Uup', 'Uuq', 'Uuh', 'Uuo']
-keywords=["BASIS","end","basis"]
-basissetname=os.path.splitext(os.path.basename(OPTIONS.outputfile))[0]
-basis = lxml.Element("basis",name=basissetname)
-basis.append(lxml.Comment("Basis set created by xtp_basisset from {} at {}".format(os.path.basename(OPTIONS.nwchem),time.strftime("%c"))))    
-with open(OPTIONS.nwchem,'r') as f:
-    for line in f.readlines():
+
+
+def turbomolegetcontributions(lines,basissetstringlist,basis,shells):
+    keywords=["o","c"]
+    newbasissets=[]
+    start=False
+    basissetfound=False
+    for line in lines
         if line[0]=="#":
             continue
-        elif line in ["\n","\r\n"]:
-            element=None
-	    continue
-        entries=line.split()
-        if entries[0] in keywords:
-            element=None
+        elif line in ["\n","\r\n"]:                
             continue
-        elif entries[0] in elements:
-            element=getelemententry(basis,entries[0])
-            shell=lxml.SubElement(element,"shell",type=entries[1],scale="1.0")
-        elif len(entries)>1 and shell!=None:
-            constant=lxml.SubElement(shell,"constant",decay="{:1.6e}".format(float(entries[0])))
-            for i in range(len(entries[1:])):
-                 lxml.SubElement(constant,"contraction",type=types[i],factor="{:1.6e}".format(float(entries[i+1])))
+        if line[0]=="*":
+            if start:
+                start=False
+            else:
+                start=True
+        elif line[0] in keywords and basissetfound==False:
+            if line.split()[-1] in basissetstringlist:
+                basissetfound=True
+        if start and basissetfound:
+            if "->" in line:
+                newbasissets.append(line.split()[-1])
+            entries=line.split()
+            elif len(entries)==2:
+                if entries[-1].upper() in shells:
+                    shelltype=entries[-1].upper()
+                    shell=lxml.SubElement(basis,"shell",type=shelltype,scale="1.0")
+                else:
+                    constant=lxml.SubElement(shell,"constant",decay="{:1.6e}".format(float(entries[0])))
+                    lxml.SubElement(constant,"contraction",type=shelltype,factor="{:1.6e}".format(float(entries[1])))
+            else:
+                print "Cannot figure out what line '{}' means".format(line)
+                sys.exit()
+
+    if len(newbasissets)>0):
+        turbomolegetcontributions(lines,newbasissets,basis,shells)
+       
+
+    return
+    
+
+# =============================================================================
+# PARSING NWCHEM FILE
+# =============================================================================
+
+basissetname=os.path.splitext(os.path.basename(OPTIONS.outputfile))[0]
+basis = lxml.Element("basis",name=basissetname)
+basis.append(lxml.Comment("Basis set created by xtp_basisset from {} at {}".format(os.path.basename(OPTIONS.input),time.strftime("%c"))))  
+
+elements=['H', 'He', 'Li', 'Be', 'B', 'C', 'N', 'O', 'F', 'Ne', 'Na', 'Mg', 'Al', 'Si', 'P', 'S', 'Cl', 'K', 'Ar', 'Ca', 'Sc', 'Ti', 'V', 'Cr', 'Mn', 'Fe', 'Ni', 'Co', 'Cu', 'Zn', 'Ga', 'Ge', 'As', 'Se', 'Br', 'Kr', 'Rb', 'Sr', 'Y', 'Zr', 'Nb', 'Mo', 'Tc', 'Ru', 'Rh', 'Pd', 'Ag', 'Cd', 'In', 'Sn', 'Sb', 'I', 'Te', 'Xe', 'Cs', 'Ba', 'La', 'Ce', 'Pr', 'Nd', 'Pm', 'Sm', 'Eu', 'Gd', 'Tb', 'Dy', 'Ho', 'Er', 'Tm', 'Yb', 'Lu', 'Hf', 'Ta', 'W', 'Re', 'Os', 'Pt', 'Ir', 'Au', 'Hg', 'Tl', 'Pb', 'Bi', 'Po', 'At', 'Rn', 'Fr', 'Ra', 'Ac', 'Pa', 'Th', 'Np', 'U', 'Am', 'Pu', 'Bk', 'Cm', 'Cf', 'Es', 'Fm', 'Md', 'No', 'Rf', 'Lr', 'Db', 'Bh', 'Sg', 'Mt', 'Ds', 'Rg', 'Hs', 'Uut', 'Uub', 'Uup', 'Uuq', 'Uuh', 'Uuo']
+shells=["S","P","D","F","G","H","I"]
+
+
+if os.path.isfile(OPTIONS.input):
+    print "File {} seems to be a NWCHEM file".format(OPTIONS.input)
+   
+
+
+    
+    keywords=["BASIS","end","basis"]
+
+    with open(OPTIONS.input,'r') as f:
+        for line in f.readlines():
+            if line[0]=="#":
+                continue
+            elif line in ["\n","\r\n"]:
+                element=None
+	            continue
+            entries=line.split()
+            if entries[0] in keywords:
+                element=None
+                continue
+            elif entries[0] in elements:
+                element=getelemententry(basis,entries[0])
+                shell=lxml.SubElement(element,"shell",type=entries[1],scale="1.0")
+            elif len(entries)>1 and shell!=None:
+                constant=lxml.SubElement(shell,"constant",decay="{:1.6e}".format(float(entries[0])))
+                for i in range(len(entries[1:])):
+                     lxml.SubElement(constant,"contraction",type=shells[i],factor="{:1.6e}".format(float(entries[i+1])))
+            else:
+               okquit("\nCannot understand line in file:{}".format(line)) 
+
+elif os.path.isdir(OPTIONS.input):
+
+    print "Directory {} seems to be a Turbomole folder".format(OPTIONS.input)
+    if OPTIONS.turbobasis == '':
+	progargs.print_help()
+	okquit("\nQuit here, because: Turbomole basisset not set (option -t/--turbomolebasisset)")
+    for ele in elements:
+        if os.path.isfile(ele.lower()):
+            with open(ele.lower(),'r') as f:
+                lines=f.readlines()
+                element=getelemententry(basis,ele)
+                turbomolegetcontributions(lines,OPTIONS.turbobasis,element,shells)
         else:
-           okquit("\nCannot understand line in file:{}".format(line)) 
+           print "File {} belonging to element not found. Skipping element!".format(element.lower(),element)                  
+
+                    
+    
+
+
             
-            
-print "Imported  new basisset {} from {} written to file {} with xtp_basisset".format(basissetname,OPTIONS.nwchem,OPTIONS.outputfile)
+print "Imported  new basisset {} from {} written to file {} with xtp_basisset".format(basissetname,OPTIONS.input,OPTIONS.outputfile)
         
 with open(OPTIONS.outputfile, 'w') as f:
             f.write(lxml.tostring(basis, pretty_print=True))
