--- a/scripts/xtp_basisset.in
+++ b/scripts/xtp_basisset.in
@@ -79,56 +79,75 @@ progargs.add_argument('-t', '--turbomolebasisset',
     help='For turbomole specify the basisset that is supposed to be extracted from Files, for auxbasis sets the basisset the aux basisset is supposed to be used for.')
     
 OPTIONS = progargs.parse_args()
-if OPTIONS.nwchem == '':
+if OPTIONS.input == '':
 	progargs.print_help()
-	okquit("\nQuit here, because: Inputfile not set (option -f/--inputnw)")
+	okquit("\nQuit here, because: Inputfile not set (option -f/--input)")
 if OPTIONS.outputfile == '':
 	progargs.print_help()
 	okquit("\nQuit here, because: outputfile not set (option -o/--outputvotca)")
 
 def getelemententry(root,element):
     for e in root:
-	print e.get("name")
+	#print e.get("name")
         if e.get("name")==element:
             return e
-    return lxml.SubElement(root,"element",name=entries[0])
+    return lxml.SubElement(root,"element",name=element)
+
+def convertofloat(floatstring):
+    
+    if "D" in floatstring:
+        floatstring=floatstring.replace("D","E")
+    try:
+        a=float(floatstring)
+        return a
+    except ValueError:
+        print "Cannot figure out what '{}' means".format(floatstring)
+        sys.exit()
+        return False 
 
 
-def turbomolegetcontributions(lines,basissetstringlist,basis,shells):
-    keywords=["o","c"]
+def turbomolegetcontributions(element,lines,basissetstringlist,basis,shells):
+    
     newbasissets=[]
     start=False
     basissetfound=False
-    for line in lines
+    for line in lines:
         if line[0]=="#":
             continue
         elif line in ["\n","\r\n"]:                
             continue
-        if line[0]=="*":
+        elif "$end" in line:
+            continue
+        if line[0]=="*" and basissetfound:
             if start:
                 start=False
             else:
                 start=True
-        elif line[0] in keywords and basissetfound==False:
-            if line.split()[-1] in basissetstringlist:
+            continue
+
+        if line.split()[0]==element:
+            if line.split()[-1] in basissetstringlist and basissetfound==False:
                 basissetfound=True
+            continue
         if start and basissetfound:
             if "->" in line:
                 newbasissets.append(line.split()[-1])
+                continue
             entries=line.split()
-            elif len(entries)==2:
+            if len(entries)==2:
                 if entries[-1].upper() in shells:
                     shelltype=entries[-1].upper()
                     shell=lxml.SubElement(basis,"shell",type=shelltype,scale="1.0")
                 else:
-                    constant=lxml.SubElement(shell,"constant",decay="{:1.6e}".format(float(entries[0])))
-                    lxml.SubElement(constant,"contraction",type=shelltype,factor="{:1.6e}".format(float(entries[1])))
+                    
+                    constant=lxml.SubElement(shell,"constant",decay="{:1.6e}".format(convertofloat(entries[0])))
+                    lxml.SubElement(constant,"contraction",type=shelltype,factor="{:1.6e}".format(convertofloat(entries[1])))
             else:
                 print "Cannot figure out what line '{}' means".format(line)
                 sys.exit()
 
-    if len(newbasissets)>0):
-        turbomolegetcontributions(lines,newbasissets,basis,shells)
+    if len(newbasissets)>0:
+        turbomolegetcontributions(element,lines,newbasissets,basis,shells)
        
 
     return
@@ -160,7 +179,7 @@ if os.path.isfile(OPTIONS.input):
                 continue
             elif line in ["\n","\r\n"]:
                 element=None
-	            continue
+                continue
             entries=line.split()
             if entries[0] in keywords:
                 element=None
@@ -169,9 +188,9 @@ if os.path.isfile(OPTIONS.input):
                 element=getelemententry(basis,entries[0])
                 shell=lxml.SubElement(element,"shell",type=entries[1],scale="1.0")
             elif len(entries)>1 and shell!=None:
-                constant=lxml.SubElement(shell,"constant",decay="{:1.6e}".format(float(entries[0])))
+                constant=lxml.SubElement(shell,"constant",decay="{:1.6e}".format(convertofloat(entries[0])))
                 for i in range(len(entries[1:])):
-                     lxml.SubElement(constant,"contraction",type=shells[i],factor="{:1.6e}".format(float(entries[i+1])))
+                     lxml.SubElement(constant,"contraction",type=shells[i],factor="{:1.6e}".format(convertofloat(entries[i+1])))
             else:
                okquit("\nCannot understand line in file:{}".format(line)) 
 
@@ -183,13 +202,13 @@ elif os.path.isdir(OPTIONS.input):
 	okquit("\nQuit here, because: Turbomole basisset not set (option -t/--turbomolebasisset)")
     for ele in elements:
         if os.path.isfile(ele.lower()):
+            print "Opening {}".format(ele.lower())
             with open(ele.lower(),'r') as f:
                 lines=f.readlines()
                 element=getelemententry(basis,ele)
-                turbomolegetcontributions(lines,OPTIONS.turbobasis,element,shells)
+                turbomolegetcontributions(ele.lower(),lines,OPTIONS.turbobasis,element,shells)
         else:
-           print "File {} belonging to element not found. Skipping element!".format(element.lower(),element)                  
-
+           print "File {} belonging to element not found. Skipping element!".format(ele.lower(),element)                  
                     
     
 
