--- a/share/xml/csg_defaults.xml.in
+++ b/share/xml/csg_defaults.xml.in
@@ -5,6 +5,9 @@
     <constrainedLS>
       <DESC>boolean variable: false - simple least squares, true - constrained least squares. For details see the VOTCA paper. Practically, both algorithms give the same results, but simple least squares is faster. If you are a mathematician and you think that a spline can only then be called a spline if it has continuous first and second derivatives, use constrained least squares.</DESC>
     </constrainedLS>
+    <dist>1e-5
+      <DESC> Accuracy for evaluating the difference in bead positions. Default is 1e-5 </DESC>
+    </dist>
     <frames_per_block>
       <DESC>number of frames, being used for block averaging. Atomistic trajectory, specified with --trj option, is divided into blocks and the force matching equations are solved separately for each block. Coarse-grained force-field, which one gets on the output is averaged over those blocks.</DESC>
     </frames_per_block>
@@ -416,6 +419,9 @@
     <name>
       <DESC>Name of the bonded interaction. The name can be arbitrary but should be unique. For bonded interactions, this should match the name specified in the mapping file.</DESC>
     </name>
+    <periodic>0
+      <DESC>set to 1 when calculating bond dihedral potentials with csg_fmatch -> enforces periodicity of potential. (default is 0) </DESC>
+    </periodic>
   </bonded>
   <non-bonded>
     <DESC>Interaction specific option for non-bonded interactions</DESC>
@@ -458,6 +464,9 @@
       <out_step>
 	      <DESC>Grid spacing for the output grid. Normally, one wants to have this parameter smaller than fmatch.step, to have a smooth curve, without additional spline interpolation. As a rule of thumb we normally use fmatch.out_step which is approximately 5 times smaller than fmatch.step.</DESC>
       </out_step>
+      <dist>1e-5
+        <DESC> Accuracy for evaluating the difference in bead positions. Default is 1e-5 </DESC>
+      </dist>
     </fmatch>
     <re>
       <DESC>Relative entropy options</DESC>
