manual installs now to votca/manual if command make manual is used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,9 @@ endif(NOT DEFINED MAN)
 if (NOT DEFINED DATA)
   set(DATA "share/votca")
 endif(NOT DEFINED DATA)
+if (NOT DEFINED XTP_MANUAL)
+  set(XTP_MANUAL "manual")
+endif(NOT DEFINED XTP_MANUAL)
 #option(WITH_DIPRO "Build mergeorbitals and DIPRO, which use fortran" ON)
 
 #for votca_xtp_config.h
@@ -165,6 +168,7 @@ add_subdirectory(src/tools)
 #add_subdirectory(share/scripts/dipro) 
 add_subdirectory(share)  
 
-add_custom_target(manual COMMAND make -C ${CMAKE_SOURCE_DIR}/manual
+add_custom_target(manual COMMAND make install -C ${CMAKE_SOURCE_DIR}/manual
 	XTP_SCRIPTS="${XTP_SCRIPTS}"
-	XTP_PROGS="${XTP_PROGS}")
+	XTP_PROGS="${XTP_PROGS}"
+    XTP_MANUAL="${CMAKE_INSTALL_PREFIX}/${XTP_MANUAL}" VERBATIM)
