--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,11 @@ before_script:
       wget -qO- https://www.hdfgroup.org/ftp/HDF5/releases/hdf5-${HDF5_VERSION}/src/hdf5-${HDF5_VERSION}.tar.gz | tar -xz &&
       cd hdf5-${HDF5_VERSION} && ./configure --prefix=$HOME/hdf5 && make -j4 &> /dev/null && make install && cd ..;
     fi
+  - if [[ ${GMX_VERSION} = 9999 ]]; then
+      CMAKE_VERSION=3.4.3-Linux-x86_64 &&
+      wget --no-check-certificate -qO- http://www.cmake.org/files/v${CMAKE_VERSION:0:3}/cmake-${CMAKE_VERSION}.tar.gz | tar -xz &&
+      export CMAKE="$PWD/cmake-${CMAKE_VERSION}/bin/cmake" ;
+    fi
   - if [[ ${MAN} ]]; then git clone --depth=1 https://github.com/votca/doxygen.git "$HOME/votca/src/devdoc"; fi 
   - if [[ ${GVER} ]]; then export CC=gcc-${GVER}; export CXX=g++-${GVER}; fi
 
