--- a/include/votca/tools/CMakeLists.txt
+++ b/include/votca/tools/CMakeLists.txt
@@ -1,21 +1,18 @@
 configure_file(votca_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/votca_config.h)
-file(GLOB_RECURSE VOTCA_HEADERS *.h *.hpp ${CMAKE_CURRENT_BINARY_DIR}/votca_config.h )
+
+file(GLOB_RECURSE VOTCA_HEADERS *.h ${CMAKE_CURRENT_BINARY_DIR}/votca_config.h )
+
 if (NOT WITH_SQLITE3)
   file(GLOB_RECURSE NOT_VOTCA_HEADERS database.h statement.h)
   list(REMOVE_ITEM VOTCA_HEADERS ${NOT_VOTCA_HEADERS})
 endif(NOT WITH_SQLITE3)
-if (NOT WITH_LINALG)
-    if (NOT GSL_FOUND)
-        file(GLOB_RECURSE NOT_VOTCA_HEADERS votca_gsl_boost_ublas_matrix_prod.h)
-        list(REMOVE_ITEM VOTCA_HEADERS ${NOT_VOTCA_HEADERS})
-    endif (NOT GSL_FOUND)
-    if (NOT MKL_FOUND)
-        file(GLOB_RECURSE NOT_VOTCA_HEADERS votca_mkl_boost_ublas_matrix_prod.h votca_mkl_boost_ublas_gemm.hpp )
-        list(REMOVE_ITEM VOTCA_HEADERS ${NOT_VOTCA_HEADERS})
-    endif (NOT MKL_FOUND)
+if (NOT GSL_FOUND)
+    file(GLOB_RECURSE NOT_VOTCA_HEADERS votca_gsl_boost_ublas_matrix_prod.h)
+    list(REMOVE_ITEM VOTCA_HEADERS ${NOT_VOTCA_HEADERS})
+endif (NOT GSL_FOUND)
+
        
 
-endif(NOT WITH_LINALG)
 
 
 install(FILES ${VOTCA_HEADERS} DESTINATION include/votca/tools)
