--- a/include/votca/tools/votca_config.h.in
+++ b/include/votca/tools/votca_config.h.in
@@ -26,7 +26,7 @@
     #define NDEBUG
     #endif
 #elif defined(MKL)
-    #include "votca_mkl_boost_ublas_matrix_prod.h"
+    #include "mkl_boost_ublas_matrix_prod.hpp"
     #ifndef NDEBUG
     #define NDEBUG
     #endif
