.travis.yml: add transfig

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ addons:
       - pgf
       - texlive-fonts-recommended
       - texlive-latex-extra
+      - transfig
       - doxygen
       - graphviz
       - python-numpy
