.travis.yml: added inkscape

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ addons:
       - texlive-fonts-recommended
       - texlive-latex-extra
       - transfig
+      - inkscape
       - doxygen
       - graphviz
       - python-numpy
