--- a/src/libtools/CMakeLists.txt
+++ b/src/libtools/CMakeLists.txt
@@ -6,54 +6,17 @@ include_directories(${EXPAT_INCLUDE_DIR})
 set (EXPAT_CFLAGS_PKG "-I${EXPAT_INCLUDE_DIRS}")
 string(REGEX REPLACE "^(.*)/lib([^/]*)\\.[^.]*$" "-L\\1 -l\\2" EXPAT_LIBS_PKG ${EXPAT_LIBRARY})
 
-
-
-option(WITH_GSL "Use GSL, disabling leads to reduced functionality!" ON)
-if (WITH_GSL)
-  find_package(GSL)
-endif(WITH_GSL)
-
-option(WITH_MKL "Checking if MKL is installed in order to improve UBLAS performance" ON)
-if (WITH_MKL)
-  find_package(MKL)
-  if(NOT MKL_FOUND AND CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
-    #TODO: try to append -mkl to cflags
-  endif(NOT MKL_FOUND AND CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
-endif(WITH_MKL)
-
-#option(WITH_EIGEN "Checking if Eigen3 is installed in order to improve performance" ON)
-#if (WITH_EIGEN)
-#  find_package(Eigen) #it looks for eigen3
-#endif (WITH_EIGEN)
-
-#we can only use of of these
-set(GSL_PKG)
-set(EIGEN)
-set(EIGEN_PKG)
-#it seems there is a problem with gcc-4.8 and mkl
-# let force icc for now
-if(NOT WITH_MKL AND NOT WITH_GSL)
+if(NOT MKL_FOUND AND NOT GSL_FOUND)
   #explicitly disabled
   file(GLOB VOTCA_LINALG_SOURCES linalg/dummy/*.cc)
-else()
-  if (MKL_FOUND AND CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
-    include_directories(${MKL_INCLUDE_DIRS})
-    file(GLOB VOTCA_LINALG_SOURCES linalg/mkl/*.cc)
-    set(LINALG_LIBRARIES ${MKL_LIBRARIES})
-  elseif(GSL_FOUND)
-    include_directories(${GSL_INCLUDE_DIRS})
-    set(GSL_PKG "gsl") #used in libvotca_csg.pc
-    file(GLOB VOTCA_LINALG_SOURCES linalg/gsl/*.cc)
-    set(LINALG_LIBRARIES ${GSL_LIBRARIES})
-  #elseif (EIGEN_FOUND)
-  #  set(EIGEN TRUE) #used in votca_config.h
-  #  set(EIGEN_PKG "eigen3") #used in libvotca_csg.pc
-  #  include_directories(${EIGEN_INCLUDE_DIRS})
-  #  file(GLOB VOTCA_LINALG_SOURCES linalg/eigen/*.cc)
-  #  set(LINALG_LIBRARIES ${EIGEN_LIBRARIES})
-  else()
-    message(FATAL_ERROR "NO gsl nor mkl found")
-  endif()
+elseif (MKL_FOUND)
+  include_directories(${MKL_INCLUDE_DIRS})
+  file(GLOB VOTCA_LINALG_SOURCES linalg/mkl/*.cc)
+  set(LINALG_LIBRARIES ${MKL_LIBRARIES})
+elseif(GSL_FOUND)
+  include_directories(${GSL_INCLUDE_DIRS})
+  file(GLOB VOTCA_LINALG_SOURCES linalg/gsl/*.cc)
+  set(LINALG_LIBRARIES ${GSL_LIBRARIES})
 endif()
 
 file(GLOB VOTCA_SOURCES *.cc)
