.travis.yml: add python-lxml

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ addons:
       - libhdf5-serial-dev
       - pkg-config
       - pgf
+      - python-lxml
       - texlive-fonts-recommended
       - texlive-latex-extra
       - transfig
