--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ addons:
       - python-lxml
       - texlive-fonts-recommended
       - texlive-latex-extra
+      - texlive-latex-recommended
       - transfig
       - inkscape
       - doxygen
