--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ addons:
       - texlive-fonts-recommended
       - texlive-latex-extra
       - texlive-humanities
+      - texlive-pstricks
       - transfig
       - inkscape
       - doxygen
