--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,9 +48,9 @@ endif(NOT DEFINED MAN)
 if (NOT DEFINED DATA)
   set(DATA "share/votca")
 endif(NOT DEFINED DATA)
-if (NOT DEFINED XTP_MANUAL)
-  set(XTP_MANUAL "manual")
-endif(NOT DEFINED XTP_MANUAL)
+if (NOT DEFINED XTP_MANUAL_LOCATION)
+  set(XTP_MANUAL_LOCATION "share/votca/manual")
+endif(NOT DEFINED XTP_MANUAL_LOCATION)
 #option(WITH_DIPRO "Build mergeorbitals and DIPRO, which use fortran" ON)
 
 #for votca_xtp_config.h
@@ -170,17 +170,15 @@ add_subdirectory(share)
 
 add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/manual/xtp_manual.pdf COMMAND make -C ${CMAKE_SOURCE_DIR}/manual
 	XTP_SCRIPTS="${XTP_SCRIPTS}"
-	XTP_PROGS="${XTP_PROGS}"
-    XTP_MANUAL="${CMAKE_INSTALL_PREFIX}/${XTP_MANUAL}" VERBATIM)
+	XTP_PROGS="${XTP_PROGS}" VERBATIM)
 add_custom_target(manual DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/manual/xtp_manual.pdf)
 
 add_custom_target(cleanmanual COMMAND make clean -C ${CMAKE_SOURCE_DIR}/manual
 	XTP_SCRIPTS="${XTP_SCRIPTS}"
-	XTP_PROGS="${XTP_PROGS}"
-    XTP_MANUAL="${CMAKE_INSTALL_PREFIX}/${XTP_MANUAL}" VERBATIM)
+	XTP_PROGS="${XTP_PROGS}" VERBATIM)
 
 add_custom_target(installmanual COMMAND make install -C ${CMAKE_SOURCE_DIR}/manual
 	XTP_SCRIPTS="${XTP_SCRIPTS}"
 	XTP_PROGS="${XTP_PROGS}"
-    XTP_MANUAL="${CMAKE_INSTALL_PREFIX}/${XTP_MANUAL}" VERBATIM)
+    XTP_MANUAL_LOCATION="${CMAKE_INSTALL_PREFIX}/${XTP_MANUAL_LOCATION}" VERBATIM)
 add_dependencies(installmanual manual)
