--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ share/doc/Doxyfile
 
 src/libxtp/votca_config.h
 src/libxtp/hgversion.h
-include/votca/xtp/votca_xtp_config.h
+
 
 src/tools/xtp_dump
 src/tools/xtp_parallel
@@ -34,7 +34,8 @@ scripts/xtp_update_exciton.out
 scripts/xtp_basisset
 scripts/xtp_basisset.out
 
-
+intel/
+include/votca/xtp/votca_config.h
 
 netbeans/*/build
 .dep.inc
