--- a/include/votca/xtp/votca_config.h.in
+++ b/include/votca/xtp/votca_config.h.in
@@ -14,7 +14,7 @@
 #endif
 
 /* Linear algebra packages */
-#cmakedefine EIGEN
+
 #cmakedefine MKL
 #cmakedefine GSL
 
@@ -25,7 +25,7 @@
 #if defined(GSL)
     #include <votca/xtp/gsl_boost_ublas_matrix_prod.h>
 #elif defined(MKL)
-    #include <votca/xtp/mkl_boost_ublas_matrix_prod.h>
+    #include <votca/xtp/mkl_boost_ublas_matrix_prod.hpp>
 #endif
 
 #endif // _VOTCA_XTP_CONFIG_H
