--- a/manual/reference/programs/Makefile
+++ b/manual/reference/programs/Makefile
@@ -6,7 +6,7 @@ TXT2TAGS=$(TRUNC)/manual/scripts/txt2tags
 .PHONY: clean bootstrap
 .SECONDARY:
 
-all: clean all.tex   
+all: all.tex   
 
 #this is a hack to generate Makefile.incl
 HACK:=$(shell $(MAKE) -f Makefile.BINS Makefile.incl)
