--- a/manual/reference/programs/Makefile.BINS
+++ b/manual/reference/programs/Makefile.BINS
@@ -12,6 +12,8 @@ Makefile.incl: dummy
 	echo >> $@
 	echo $(BINS1) $(BINS2)  | sed 's/[[:space:]]\+/\n/g' | sed -e 's/.*/\t&.tex\\/' -e '1i BINSTEX=\\' >> $@
 	echo >> $@
+	echo $(XTP_SCRIPTS) $(XTP_PROGS) | sed 's/[[:space:]]\+/\n/g' | sed 's@\(.*/\)\([^/]*\)@\2.t2t: &@' >> $@
+	echo >> $@
 	@#just added to avoid clock screw
 	sleep 0.5
 
