--- a/manual/reference/xml/Makefile.XMLS
+++ b/manual/reference/xml/Makefile.XMLS
@@ -6,6 +6,7 @@ all: Makefile.incl
 .PHONY: dummy
 dummy: ;
 
+SHARE=../../../share
 Makefile.incl: dummy
 	echo $(XMLS) | sed 's/[[:space:]]\+/\n/g' | sed -e 's/.*/\t&.t2t\\/' -e '1i XMLST2T=\\' > $@
 	echo >> $@
@@ -13,6 +14,7 @@ Makefile.incl: dummy
 	echo >> $@
 	echo $(XMLS) | sed 's/[[:space:]]\+/\n/g' | sed -e 's/.*/\t&.html\\/' -e '1i XMLSHTML=\\' >> $@
 	echo >> $@
+	echo $(XMLS) | sed 's/[[:space:]]\+/\n/g' | sed 's@.*@&.t2t: $(SHARE)/xml/&\n@' >> $@
 	@#just added to avoid clock screw
 	sleep 0.5
 
