cmake: drop some circular deps in scripts

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -7,8 +7,7 @@ if(WITH_DIPRO)
       -DINPUT="${SCRIPT}.out" -DOUTPUT="${SCRIPT}"
       -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
       -DMERCURIAL_EXECUTABLE="${MERCURIAL_EXECUTABLE}"
-      -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/hgscript.cmake
-      DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out)
+      -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/hgscript.cmake)
     set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
     install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
     set(XTP_SCRIPTS "${XTP_SCRIPTS} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
@@ -22,8 +21,7 @@ foreach(SCRIPT xtp_testsuite xtp_update xtp_update_exciton xtp_basisset)
     -DINPUT="${SCRIPT}.out" -DOUTPUT="${SCRIPT}"
     -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
     -DMERCURIAL_EXECUTABLE="${MERCURIAL_EXECUTABLE}"
-    -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/hgscript.cmake
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out)
+    -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/hgscript.cmake)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
   set(XTP_SCRIPTS "${XTP_SCRIPTS} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
