xtp_manual.pdf -> xtp-manual.pdf

--- a/manual/.gitignore
+++ b/manual/.gitignore
@@ -24,18 +24,18 @@ fig/workflow/workflow.eps
 fig/workflow/workflow.fd
 literature.bib
 literature_short.bib
-xtp_manual.bbl
-xtp_manual.blg
-xtp_manual.brf
-xtp_manual.dvi
-xtp_manual.fdb_latexmk
-xtp_manual.idx
-xtp_manual.ilg
-xtp_manual.ind
-xtp_manual.log
-xtp_manual.out
-xtp_manual.toc
-xtp_manual.fls
-xtp_manual.pdf
+xtp-manual.bbl
+xtp-manual.blg
+xtp-manual.brf
+xtp-manual.dvi
+xtp-manual.fdb_latexmk
+xtp-manual.idx
+xtp-manual.ilg
+xtp-manual.ind
+xtp-manual.log
+xtp-manual.out
+xtp-manual.toc
+xtp-manual.fls
+xtp-manual.pdf
 reference/programs/*.tex
 reference/*/*.xml.tex
