--- a/.travis.yml
+++ b/.travis.yml
@@ -72,12 +72,12 @@ script:
 
 after_success:
   - if [[ ${XTP_MAN} ]]; then
-      cp "$HOME"/votca/{share/votca/manual,src/devdoc}/xtp_manual.pdf;
+      cp "$HOME"/votca/{share/votca/manual,src/devdoc}/xtp-manual.pdf;
       cd "$HOME/votca/src/devdoc";
       if [[ ${TRAVIS_BRANCH} = master && ${encrypted_f4232b15402f_key} && ${encrypted_f4232b15402f_iv} && ${TRAVIS_PULL_REQUEST} == false ]]; then
         git config --global user.name "Automatic Deployment (Travis CI)";
         git config --global user.email "votca-commits@googlegroups.com";
-        git add --all && git commit -m "Documentation Update";
+        git add --all && git commit -m "XTP Documentation Update";
         openssl aes-256-cbc -K $encrypted_f4232b15402f_key -iv $encrypted_f4232b15402f_iv -in deploy2.enc -out ~/.ssh/id_rsa -d;
         chmod 600 ~/.ssh/id_rsa;
         git push git@github.com:votca/doxygen.git gh-pages;
