cmake: remove old hg stuff

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -6,8 +6,7 @@ if(WITH_DIPRO)
     add_custom_command(OUTPUT ${SCRIPT} COMMAND ${CMAKE_COMMAND}
       -DINPUT="${SCRIPT}.out" -DOUTPUT="${SCRIPT}"
       -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
-      -DMERCURIAL_EXECUTABLE="${MERCURIAL_EXECUTABLE}"
-      -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/hgscript.cmake)
+      -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/gitscript.cmake)
     set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
     install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
     set(XTP_SCRIPTS "${XTP_SCRIPTS} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
@@ -20,8 +19,7 @@ foreach(SCRIPT xtp_testsuite xtp_update xtp_update_exciton xtp_basisset)
   add_custom_command(OUTPUT ${SCRIPT} COMMAND ${CMAKE_COMMAND}
     -DINPUT="${SCRIPT}.out" -DOUTPUT="${SCRIPT}"
     -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
-    -DMERCURIAL_EXECUTABLE="${MERCURIAL_EXECUTABLE}"
-    -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/hgscript.cmake)
+    -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/gitscript.cmake)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
   set(XTP_SCRIPTS "${XTP_SCRIPTS} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
