--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ share/doc/html
 share/doc/Doxyfile
 
 src/libxtp/votca_config.h
-src/libxtp/hgversion.h
+src/libxtp/gitversion.h
 include/votca/xtp/votca_xtp_config.h
 
 src/tools/xtp_dump
