--- a/scripts/xtp_update.in
+++ b/scripts/xtp_update.in
@@ -1,5 +1,5 @@
 #! /usr/bin/env python2
-VERSION='@PROJECT_VERSION@ #CSG_HG_ID#'
+VERSION='@PROJECT_VERSION@ #CSG_GIT_ID#'
 import sys
 import os
 import getpass
