--- a/include/votca/xtp/votca_config.h.in
+++ b/include/votca/xtp/votca_config.h.in
@@ -26,6 +26,12 @@
    #include <omp.h>
 #endif
 
+/* Version number of package */
+#define VERSION "@PROJECT_VERSION@"
+
+/* Contact address of package */
+#define PACKAGE_BUGREPORT "@PROJECT_CONTACT@"
+
 /* LIBXC */
 #cmakedefine LIBXC
 
